myStyle.css
html,body{
	height: 100%;
	width: 100%;
}

.navbar{
	background-color: white; /*Have to make it sky blue*/
	padding: 1% 0;
	font-size: 1.2em;
}

.navbar-brand{
	min-height: 55px;
	padding: 0 15px 5px;
}

.navbar-default .navbar-nav li a{
	color:#050505; /*change to white color*/
}

.navbar-default .navbar-nav li a:hover, .navbar-default .navbar-nav li a.active{
	color:rgb(17,125,234); /*change to white color*/
}

#home{
	background:url(img/1.jpg) no-repeat center fixed;
	display: table;
	height: 100%;
	position: relative;
	background-size: cover;
	width: 100%;
}

.landing-text{
	display: table-cell;
	text-align: center;
	vertical-align: middle;
}

.landing-text h1{
	font-size: 500%;
	font-weight: 700;
}

.padding{
	padding: 80px 0;
}

.padding img{
	width: 100%;
}

#fixed{
	background:url(img/op2.jpg) no-repeat center fixed;
	display: table;
	height: 60% !important;
	width: 100%;
	position: relative;
	background-size: cover;
}

footer{
	width: 100%;
	background-color: #23415C;
	padding: 5% 5% 10% 5%;
	color: #FFF; 
	left: 0;
	right: 0;
}

.fa{
	padding: 15px;
	font-size: 25px;
	color: #FFF;
}

.fa:hover{
	color: #050505;
	text-decoration: none;
}

@media(max-width: 768px){
	.landing-text h1{
		font-size: 300%;
		padding: 10px;
	}
	.fa{
		font-size:20px;
		padding: 10px;
	}
}

